FlightPath 6.x Changelog
========================


2022-02-15  
  Added new column to content__engagement:  to_sms_phone.  This is so we can keep up with what number this txt message was sent TO.  Useful for
  schools with more than one number.  Only applies to engagement type txt_msg.
  
  Added a message on engagements screen when a sent txt message is not delivered.
  
  Altered "engagements received" tab (under alerts) to show txt messages sent to us even though they may not be our advisee.  This is based on
  phone numbers which we are marked as should receive notifications for.
  

2022-02-14
  Added new tab to the Alerts (bell icon) page.  Engagements (txt or email) sent by student.
  
  Made it so the bell icon badge is recalculated every 1 second to 20 minutes (based on a system setting).
  
  Fixed a bug to where when you logged a received email, it actually SENT the email to the student's address.  Same for SMS.
  
  Fixed bug in media.css where it was causing some things to be scrunched up.
  
  Made it so the notification (when you receive a txt from a student) says what number/line name they sent it to.
  
  Made is to that the student_activity record that is created when we receive a txt message states what number/line it was sent to.

  Sometimes we get "7BIT" code issues in email bodies, where things like a non-breaking space appears as =C2=A0.  Added functionality
  to convert to standard HTML instead.
  
  Fixed bug where if you do not have any advisees, you should see nothing on the "Advisee Activities" tab.  Same for Advisee Engagements tab.


2022-02-13
  Added ability to have replacement patterns in menu item titles.  Good for changing values in tabs.
  
  Minor tweaking to working and examples in hook.api.php.
  
  Modified alerts module to report how many unread alerts there on on tab.
  
  More work on the alerts bell "badge" logic.
  

2022-02-12
  Minor tweaks to CSS
  
  Preparing to enable "basge" functionality for the alerts bell.
