@@ -10,7 +10,14 @@ Header always unset X-Frame-Options
 
 # Protect files and directories from prying eyes.
 <FilesMatch "\.(engine|inc|info|install|module|profile|test|sh|.*sql|theme|tpl(\.php)?|xtmpl|svn-base)$|^(code-style\.pl|Entries.*|Repository|Root|Tag|Template|all-wcprops|entries|format)$">
-  Order allow,deny
+  # Apache 2.4 now gives a 500 error if you try to use "Order", so we need
+  # to do this if statement to check if its allowed or not.
+  <IfModule mod_authz_core.c>
+    Require all denied
+  </IfModule>
+  <IfModule !mod_authz_core.c>
+    Order allow,deny
+  </IfModule>
 </FilesMatch>
 
 # Don't show directory listings for URLs which map to a directory.
